(2001/01/24 - petrs) Replaced new style C comments, i.e. //
(2000/12/12 - petrs) packages/cscope.spec has now no local directory
(2000/12/12 - petrs) contrib/ocs now checks that cscope is in $PATH
(2000/12/11 - frost) Safety feature in mypopen.c
(2000/11/28 - blank) More FreeBSD support
(2000/11/23 - broeker) Added check for snprintf() to configure.in
(2000/11/22 - petrs) Updated date to cscope.1 man page and retagged the file
(2000/11/22 - petrs) Tagged cvs tree as v15_1
(2000/11/21 - petrs) Added UnixWare 7 packaging scripts
(2000/11/20 - petrs) 15.1 version name, man page update, README update
(2000/10/09 - atrn) better FreeBSD support
(2000/10/02 - fritsch) better BeOS support
(2000/10/02 - salz) -i now accepts '-' for a list of files from stdio
(2000/09/19 - brent) fixed -R to handle similarly named files
(2000/05/31 - mascott) ncurses.h gets picked up correctly for FreeBSD
(2000/05/18 - hops) display errors via varargs posterr(ap, ..)
                    start changing sprintfs to snprintfs
                    buildonly not go into curses - set linemode 
                        - fixes buildonly coredump
                    explicitly initialise some booleans in main.c
                    handle error messages nicely - curses msgline2 line 
                    or stdout - using snprintf+posterr(buf). 
                    Clear msg2 line  on ^L command.c.
                    Support BS in getline()  input.c.
                    Add build support for contrib dir.
(2000/05/18 - broeker) move declarations of invlib.c functions to invlib.h,
                       from global.h
(2000/05/18 - broeker) it's 'myylineno', not 'yylineno'
(2000/05/18 - broeker) don't #include <config.h>, but "config.h" --
                       it's not a system header file, after all.
(2000/05/18 - broeker) don't #include "global.h" from egrep.y -- the
                       extern declaration for yylex() only confuses
                       it, and it doesn't need most of "global.h",